<resources>
    <string name="app_name">Game</string>
    <string name="new_password">new password</string>
    <string name="old_password">old password</string>
    <string name="change">change</string>
    <string name="welcome">welcome</string>
    <string name="answer">answer</string>
    <string name="check">check</string>
    <string name="new_game">New Game</string>
    <string name="Sign_up_now">Sign up now</string>
    <string name="Full_name">Full name</string>
    <string name="Email">Email</string>
    <string name="User_name">User name</string>
    <string name="Password">Password</string>
    <string name="birth_date">birth date</string>
    <string name="gender">gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="signup">signup</string>
    <string name="show_all_games">show all games</string>
    <string name="show_last_game_data">show last game data</string>
    <string name="change_password">change password</string>
    <string name="clear_game_history">clear game history</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="let_s_sign_in">let\'s sign in</string>
    <string name="remember_me">remember me</string>
    <string name="sign_in">sign in</string>
    <string name="don_t_have_account">Don\'t have account? </string>
    <string name="settings">settings</string>
    <string name="logout">logout</string>
    <string name="Clear">Clear data</string>
    <string name="history">Do yoy want to clear history!</string>
    <string name="continu">continue</string>
    <string name="Success">Success</string>
    <string name="back">back</string>
    <string name="no_data">no data</string>
    <string name="enter_old_password">enter old password!</string>
    <string name="enter_new_password">enter new password!</string>
    <string name="check_old_password">check old password!</string>
    <string name="try_answered">try to answered!</string>
    <string name="great">great!</string>
    <string name="good_luck">Good luck</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_the_user_name">enter the user name</string>
    <string name="enter_password">enter your password</string>
    <string name="enter_birth_date">enter your birth date</string>
    <string name="choose_gender">choose your gender</string>
    <string name="username_empty">username is empty</string>
    <string name="password_empty">password is empty</string>
    <string name="Not_found">Not found!</string>
    <string name="signin_again">try to sign in again</string>
    <string name="another_password">try another password</string>
</resources>