<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@drawable/m1">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >



            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="120dp"
                android:text="@string/welcome_back"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                />

            <TextView
                android:id="@+id/s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/welcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/let_s_sign_in"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                />





            <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="15dp"
        android:background="@drawable/br1"
        android:maxLength="30"
        android:inputType="textEmailAddress"
        android:alpha="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@+id/s"
        android:hint="@string/User_name"
        android:layout_marginHorizontal="20dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        android:padding="15dp"
        android:background="@drawable/br1"
        android:maxLength="30"
        android:inputType="textPassword"
        android:alpha="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:hint="@string/Password"
        android:layout_marginHorizontal="20dp"
       />

    <CheckBox
        android:id="@+id/remember"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:text="@string/remember_me"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/white"

        />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintTop_toBottomOf="@id/remember"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="40dp"
                android:textSize="17sp"
                android:textColor="#000000"
                android:background="@drawable/br7"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_in"
                    android:layout_marginTop="30dp"
                    android:text="@string/don_t_have_account"
                    android:textSize="13sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginBottom="49dp"

                    />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/tv"
                    app:layout_constraintTop_toBottomOf="@+id/tv"
                    android:layout_marginTop="30dp"
                    android:text="@string/signup"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    />

            </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>