<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@drawable/m1">

    <Button
        android:id="@+id/all_games"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="80dp"
        android:textSize="17sp"
        android:textColor="#000000"
        android:background="@drawable/br7"
        android:text="@string/show_all_games"
        android:textAllCaps="false"
        />


    <Button
        android:id="@+id/last_game"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/all_games"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textColor="#000000"
        android:background="@drawable/br7"
        android:text="@string/show_last_game_data"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/last_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textColor="#000000"
        android:background="@drawable/br7"
        android:text="@string/change_password"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/clear_history"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textColor="#000000"
        android:background="@drawable/br7"
        android:text="@string/clear_game_history"
        android:textAllCaps="false"
        />



</androidx.constraintlayout.widget.ConstraintLayout>