<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/m1">





    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                />

            <TextView
                android:id="@+id/s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/welcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/Sign_up_now"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/src"
                android:layout_height="80dp"
                android:layout_width="80dp"
                android:src="@drawable/pict"
                android:layout_marginTop="30dp"
                app:civ_border_width="0.5dp"
                app:civ_border_color="#787878"
                app:layout_constraintTop_toBottomOf="@+id/s"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/src"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/Full_name"
                android:padding="15dp"
                android:background="@drawable/br1"
                android:maxLength="30"
                android:inputType="textPersonName"
                android:alpha="0.8"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/full_name"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/Email"
                android:padding="15dp"
                android:background="@drawable/br1"
                android:maxLength="30"
                android:inputType="textEmailAddress"
                android:alpha="0.8"

                />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/User_name"
                android:padding="15dp"
                android:background="@drawable/br1"
                android:maxLength="30"
                android:inputType="textPersonName"
                android:alpha="0.8"

                />



            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/Password"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@id/user_name"
                android:background="@drawable/br1"
                android:maxLength="30"
                android:inputType="textPassword"
                android:alpha="0.8"
                />



            <Spinner
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/br1"
                android:autofillHints="postalAddress"
                android:alpha="0.8"
                />

            <EditText
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/country"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/br1"
                android:hint="@string/birth_date"
                android:alpha="0.8"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/gender"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@+id/birth_date"

                />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_gender" >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/male"
                    android:layout_marginHorizontal="15dp"
                    android:textColor="@color/white"
                    android:shadowColor="@color/white"


                    />
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/female"
                    android:layout_marginHorizontal="15dp"
                    android:textColor="@color/white"
                    />

            </RadioGroup>


            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintTop_toBottomOf="@id/radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="40dp"
                android:textSize="17sp"
                android:textColor="#000000"
                android:background="@drawable/br7"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:layout_marginBottom="50dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                />












        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>