<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassActivity"
    android:background="@drawable/m1">


    <EditText

        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/br1"
        android:textSize="20sp"
        android:maxLength="30"
        android:inputType="textPassword"
        android:alpha="0.8"
        android:textColor="@color/white"
        android:hint="@string/old_password"
        android:gravity="center"
        />



    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/old_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/new_password"
        android:background="@drawable/br1"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:padding="15dp"
        android:maxLength="30"
        android:inputType="textPassword"
        android:alpha="0.8"
        android:gravity="center"
        />








    <Button
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="45dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/br5"
        android:text="@string/change"
        android:textAllCaps="false"
        android:alpha="0.9"
        />



</androidx.constraintlayout.widget.ConstraintLayout>