<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/m1">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >




        <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />



    <TextView
        android:id="@+id/result"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:padding="3dp"
        android:layout_height="40dp"
        android:layout_width="130dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="0"
        android:background="@drawable/br8"
        android:textColor="@color/white"
        />


    <TextView
        android:id="@+id/welcome"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15sp"
        app:layout_constraintTop_toBottomOf="@id/result"
        android:textSize="25sp"
        android:text="@string/welcome"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/user_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15sp"
        android:textSize="25sp"
        android:layout_marginTop="6dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        />


    <TextView
        android:id="@+id/age"

        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintStart_toEndOf="@id/user_name"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/number1"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:text=" "
        android:background="@drawable/br2"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="40sp"

        />

    <TextView
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:text=" "
        android:background="@drawable/br2"
        android:layout_marginTop="45dp"
        android:id="@+id/number2"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="40sp"

        />

    <TextView
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:text=" "
        android:background="@drawable/br2"
        android:layout_marginTop="45dp"
        android:id="@+id/number3"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="40sp"

        />

    <TextView
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:text=" "
        android:background="@drawable/br2"
        android:layout_marginTop="35dp"
        android:id="@+id/number4"
        app:layout_constraintTop_toBottomOf="@id/number1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="40sp"


        />

    <TextView
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:text=" "
        android:background="@drawable/br2"
        android:layout_marginTop="35dp"
        android:id="@+id/number5"
        app:layout_constraintTop_toBottomOf="@id/number2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="40sp"

        />

    <TextView
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:text=" "
        android:background="@drawable/br2"
        android:layout_marginTop="35dp"
        android:id="@+id/number6"
        app:layout_constraintTop_toBottomOf="@id/number3"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="40sp"

        />

    <TextView
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:text=" "
        android:background="@drawable/br2"
        android:layout_marginTop="35dp"
        android:id="@+id/number7"
        app:layout_constraintTop_toBottomOf="@id/number4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="40sp"


        />

    <TextView
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:text=" "
        android:background="@drawable/br2"
        android:layout_marginTop="35dp"
        android:id="@+id/number8"
        app:layout_constraintTop_toBottomOf="@id/number5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="40sp"

        />

    <TextView
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:text=" "
        android:background="@drawable/br2"
        android:layout_marginTop="35dp"
        android:id="@+id/number9"
        app:layout_constraintTop_toBottomOf="@id/number6"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="40sp"

        />



    <EditText
        android:layout_height="40dp"
        android:layout_width="200dp"
        android:textSize="18sp"
        android:background="@drawable/br1"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:id="@+id/enter_number"
        app:layout_constraintTop_toBottomOf="@id/number7"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="number"
        android:hint="@string/answer"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:padding="8dp"

        />

    <Button
        android:layout_height="40dp"
        android:layout_width="110dp"
        android:textSize="20sp"
        android:text="@string/check"
        android:textAllCaps="false"
        android:background="@drawable/br5"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:id="@+id/check_button"
        app:layout_constraintTop_toBottomOf="@id/number9"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:layout_height="42dp"
        android:layout_width="140dp"
        android:textSize="20sp"
        android:text="@string/new_game"
        android:textAllCaps="false"
        android:background="@drawable/br6"
        android:layout_marginTop="35dp"
        android:id="@+id/new_game_but"
        app:layout_constraintTop_toBottomOf="@id/enter_number"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/new_game_but"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                />

</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>